# candia

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: cli.yml  config.rs  main.rs  util.rs
src/datasource/: directory.rs  file.rs  fixed.rs  mod.rs
src/interface/: mod.rs  result.rs  specs.rs
src/scheduler/: dispatcher.rs  mod.rs
src/scheduler/strategies/: constant.rs  double_every.rs  mod.rs  pause.rs  ramp_up.rs  stepped_constant.rs
