[package]
name = "candia"
version = "0.1.0"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
edition = "2018"

[dependencies]
clap = { version = "2", features = ["yaml"] }
reqwest = "0.9"
rand = "0.5"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
colored = "1.6"
histogram = "0.6"
regex = "1.0"